fixed media page footer overlap bug in #76

--- a/ACM_General/home/static/home/scss/main.scss
+++ b/ACM_General/home/static/home/scss/main.scss
@@ -438,8 +438,6 @@ main {
  * ========================================================================= */
 
 footer {
-  position: relative;
-  z-index: 10;
   height: 220px;
   -webkit-flex-direction: column;
     -ms-flex-direction: column;
